# engine-x-3rd

./: .gitignore  CMakeLists.txt  README.md  SharedLoader.java.in  version.json
Box2D/: CMakeLists.txt
Box2D/include/Box2D/: Box2D.h
ConvertUTF/: CMakeLists.txt
android-specific/cpufeatures/: CMakeLists.txt
astc/: CMakeLists.txt
box2d/include/box2d/: Box2D.h
box2d/prebuilt/windows/: libbox2d.lib
bullet/: CMakeLists.txt
bullet/prebuilt/windows/: libBulletCollision.lib  libBulletDynamics.lib  libBulletMultiThreaded.lib  libLinearMath.lib  libMiniCL.lib
cef/: CMakeLists.txt  CefPreprocess.py
chipmunk/: CMakeLists.txt
chipmunk/src/: CMakeLists.txt
cjson/: CMakeLists.txt  fpconv.c  fpconv.h  lua_cjson.c  lua_cjson.h  strbuf.c
clipper/: CMakeLists.txt
cmake/: CocosExternalConfig.cmake
cryptopp/: CMakeLists.txt
curl/: CMakeLists.txt
curl/prebuilt/win32/: libcurl.lib
curl/prebuilt/windows/: libcurl.lib
edtaa3func/: CMakeLists.txt
freetype/: CMakeLists.txt
freetype2/: CMakeLists.txt
glad/: CMakeLists.txt  readme.txt
glad/include/glad/: glad.h
glad/prebuilt/: glad.lib
glad/src/: glad.c
glfw3/: CMakeLists.txt
glfw3/include/win32/: glfw3ext.h
glsl-optimizer/: CMakeLists.txt
jpeg/: CMakeLists.txt
jpeg/prebuilt/windows/: libjpeg.lib
libnotify/: CMakeLists.txt
linux-specific/libnotify/: CMakeLists.txt
lua/: CMakeLists.txt  loslib.c
lua-protobuf/: CMakeLists.txt  pb.c
lua/luajit/: CMakeLists.txt
lua/plainlua/: CMakeLists.txt
lua/plainlua/lua-5.3.6/src/: luaconf.h.in
lua/tolua/: CMakeLists.txt
luasocket/: CMakeLists.txt
md5/: CMakeLists.txt
minizip/: CMakeLists.txt  unzip.cpp  unzip.h  zip.cpp  zip.h
mojoal/: ._mojoal.c  CMakeLists.txt  mojoal.c
mongoose/: CMakeLists.txt
mpg123/: CMakeLists.txt
ogg/: CMakeLists.txt  README.md  readme.txt
openal/: CMakeLists.txt
openssl/: CMakeLists.txt
openssl/include/ios/openssl/: opensslconf.h
openssl/include/mac/openssl/: opensslconf.h
pbc/: CMakeLists.txt  pattern.c  pbc-lua53.c  wmessage.c
png/: CMakeLists.txt  pngpriv.h
png/arm/: arm_init.c  filter_neon.S
png/contrib/arm-neon/: android-ndk.c
png/prebuilt/windows/: libpng.lib
poly2tri/: CMakeLists.txt
pugixml/: CMakeLists.txt
recast/: CMakeLists.txt
sdl2/: CMakeLists.txt
sdl2/include/: ._SDL.h
spine-cpp/: CMakeLists.txt
tolua/: CMakeLists.txt  tolua++.h  tolua_event.c  tolua_map.c  tolua_push.c  tolua_to.c
uv/: CMakeLists.txt
vlc/: CMakeLists.txt
vlc/prebuilt/linux/: libvlc.so.5.6.0
vlc/prebuilt/linux/plugins/access/: libaccess_alsa_plugin.la  libaccess_concat_plugin.la  libaccess_imem_plugin.la  libaccess_jack_plugin.la  libaccess_mms_plugin.la  libaccess_mtp_plugin.la  libaccess_srt_plugin.la  libattachment_plugin.la  libavio_plugin.la  libcdda_plugin.la  libdc1394_plugin.la  libdtv_plugin.la  libdv1394_plugin.la  libdvb_plugin.la  libdvdnav_plugin.la  libdvdread_plugin.la  libfilesystem_plugin.la  libftp_plugin.la  libhttp_plugin.la  libhttps_plugin.la  libidummy_plugin.la  libimem_plugin.la  liblibbluray_plugin.la  liblinsys_hdsdi_plugin.la  liblinsys_sdi_plugin.la  liblive555_plugin.la  libnfs_plugin.la  libpulsesrc_plugin.la  librtp_plugin.la  libsatip_plugin.la  libsdp_plugin.la  libsftp_plugin.la  libshm_plugin.la  libsmb_plugin.la  libtcp_plugin.la  libtimecode_plugin.la  libudp_plugin.la  libv4l2_plugin.la  libvcd_plugin.la  libvdr_plugin.la  (+2 more)
vlc/prebuilt/linux/plugins/access_output/: libaccess_output_dummy_plugin.la  libaccess_output_file_plugin.la  libaccess_output_http_plugin.la  libaccess_output_livehttp_plugin.la  libaccess_output_shout_plugin.la  libaccess_output_srt_plugin.la  libaccess_output_udp_plugin.la
vlc/prebuilt/linux/plugins/audio_filter/: libaudio_format_plugin.la  libaudiobargraph_a_plugin.la  libchorus_flanger_plugin.la  libcompressor_plugin.la  libdolby_surround_decoder_plugin.la  libequalizer_plugin.la  libgain_plugin.la  libheadphone_channel_mixer_plugin.la  libkaraoke_plugin.la  libmad_plugin.la  libmono_plugin.la  libnormvol_plugin.la  libparam_eq_plugin.la  libremap_plugin.la  libsamplerate_plugin.la  libscaletempo_pitch_plugin.la  libscaletempo_plugin.la  libsimple_channel_mixer_plugin.la  libsoxr_plugin.la  libspatialaudio_plugin.la  libspatializer_plugin.la  libspeex_resampler_plugin.la  libstereo_widen_plugin.la  libtospdif_plugin.la  libtrivial_channel_mixer_plugin.la  libugly_resampler_plugin.la
vlc/prebuilt/linux/plugins/audio_output/: libadummy_plugin.la  libafile_plugin.la  libalsa_plugin.la  libamem_plugin.la  libjack_plugin.la  libpulse_plugin.la  libsndio_plugin.la
vlc/prebuilt/linux/plugins/codec/: liba52_plugin.la  libadpcm_plugin.la  libaes3_plugin.la  libaom_plugin.la  libaraw_plugin.la  libaribsub_plugin.la  libavcodec_plugin.la  libcc_plugin.la  libcdg_plugin.la  libcvdsub_plugin.la  libdca_plugin.la  libddummy_plugin.la  libdvbsub_plugin.la  libedummy_plugin.la  libfaad_plugin.la  libflac_plugin.la  libfluidsynth_plugin.la  libg711_plugin.la  libjpeg_plugin.la  libkate_plugin.la  liblibass_plugin.la  liblibmpeg2_plugin.la  liblpcm_plugin.la  libmpg123_plugin.la  liboggspots_plugin.la  libopus_plugin.la  libpng_plugin.la  librawvideo_plugin.la  librtpvideo_plugin.la  libscte18_plugin.la  libscte27_plugin.la  libsdl_image_plugin.la  libshine_plugin.la  libspdif_plugin.la  libspeex_plugin.la  libspudec_plugin.la  libstl_plugin.la  libsubsdec_plugin.la  libsubstx3g_plugin.la  libsubsusf_plugin.la  (+18 more)
vlc/prebuilt/linux/plugins/video_output/: libcaca_plugin.la  libegl_x11_plugin.la  libfb_plugin.la  libflaschen_plugin.la  libgl_plugin.la  libglconv_vaapi_drm_plugin.la  libglconv_vaapi_x11_plugin.la  libglconv_vdpau_plugin.la  libglx_plugin.la  libvdummy_plugin.la  libvmem_plugin.la  libxcb_window_plugin.la  libxcb_x11_plugin.la  libxcb_xv_plugin.la  libyuv_plugin.la
webp/: CMakeLists.txt
websockets/: CMakeLists.txt
windows-specific/iconv/: CMakeLists.txt
windows-specific/ntcvt/: ntcvt.hpp
xxhash/: CMakeLists.txt
xxtea/: CMakeLists.txt  xxtea.cpp  xxtea.h
yasio/detail/: config.hpp
zlib/: CMakeLists.txt
(+20 files in other folders)
